# tiempos-y-balanceos

./: .env.example  .env.production  .gitignore  .prettierignore  App.tsx  AppHeader.tsx  AppModals.tsx  AppRouter.tsx  AppTabContent.tsx  CICLO_MEJORA_AMFE_2026-02-22.md  CICLO_MEJORA_LANDING_PAGE_2026-02-22.md  CICLO_MEJORA_PFD_2026-02-23.md  CICLO_MEJORA_PFD_2026-02-23_C3.md  CICLO_MEJORA_PFD_2026-02-24_C4.md  CICLO_MEJORA_PFD_2026-02-24_C5.md  CICLO_MEJORA_PFD_2026-02-25.md  CICLO_MEJORA_PFD_2026-02-25_C6.md  CICLO_MEJORA_PFD_LANDING_2026-02-22.md  CLAUDE.md  ESTADO_PROYECTO.md  PROMPT_PFD_MODULE.md  README.md  REPORTE_NOCHE.md  _fixRegex.cjs  _tmp_check.js  config.ts  eslint.config.mjs  extract_amfe.py  index.css  index.html  index.tsx  iniciar_app.bat  metadata.json  package-lock.json  package.json  phantom_x_report.txt  playwright.config.ts  stress_report.txt  tailwind.config.js  tauri-shell.d.ts  (+7 more)
.claude/: settings.json
__tests__/: AppRouter.test.tsx  ConfirmModal.test.tsx  GlobalErrorBoundary.test.tsx  LandingPage.test.tsx  PromptModal.test.tsx  RotaryStrategy.test.ts  amfeLibraryTypes.test.ts  analyzeMixBySector.test.ts  apqpPackageExport.test.ts  audit_fixes.test.ts  audit_mix_v4.test.ts  audit_oee_consistency.test.ts  auto_cavity_logic.test.ts  balancingCapacityExcelExport.test.ts  balancingCapacityPreviewHtml.test.ts  balancingHelpers.test.ts  balancingMetricsCalc.test.ts  balancing_integration.test.ts  concurrency.test.ts  (+119 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+2280 files in other folders)
